fixed url redirection error and modal flickering / multiloading error

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1100,6 +1100,9 @@ select {
 .col-span-4 {
 	grid-column: span 4 / span 4;
 }
+.float-right {
+	float: right;
+}
 .m-4 {
 	margin: 1rem;
 }
@@ -1131,6 +1134,10 @@ select {
 .my-auto {
 	margin-top: auto;
 	margin-bottom: auto;
+}
+.my-24 {
+	margin-top: 6rem;
+	margin-bottom: 6rem;
 }
 .my-3 {
 	margin-top: 0.75rem;
@@ -1492,6 +1499,11 @@ select {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
@@ -1886,6 +1898,10 @@ select {
 .text-7xl {
 	font-size: 4.5rem;
 	line-height: 1;
+}
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .text-5xl {
 	font-size: 3rem;
